2004-01-05  Zoltan Varga  <vargaz@freemail.hu>

	* Win32Resources.cs: New file.

	* Win32Resources.cs: The value of properties can't be empty.

	* Win32Resources.cs: Add Win32ResourceType enumeration. Add accessors
	for well-known property names. Add missing namespace declaration.

2003-12-17  Zoltan Varga  <vargaz@freemail.hu>

	* ResourceWriter.cs (Stream): New internal property used by Ref.Emit.

2003-11-28  Dick Porter  <dick@ximian.com>

	* ResourceSet.cs: Do string compares with the Invariant culture.

2003-11-18  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* ResourceSet.cs: Implemented v1.1 updates

2003-09-07  Dick Porter  <dick@ximian.com>

	* Temporary workaround for bug 43567, so that Npgsql at least
	can run.

2003-05-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ResourceManager.cs: fixed infinite loop when the resource is not
	found. Also fixes bug #34196.

2003-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ResourceManager.cs: enabled the code that calls GetSatelliteAssembly
	and ignore the exception thrown if the assembly cannot be loaded.

2003-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ResourceManager.cs: fixed the name for the file when the culture is
	not de invariant culture. Commented out the GetSatelliteAssembly code
	to avoid NotImplementedException being thrown.

2002-08-19  Dick Porter  <dick@ximian.com>

	* ResourceWriter.cs: Implemented all methods

	* ResourceReader.cs: Cope with our ResourceSet class name, as well
	as theirs

2002-08-18  Dick Porter  <dick@ximian.com>

	* ResourceReader.cs: Finished basic implementation.  Some
	optimisation in conjunction with ResourceSet still possible though

2002-08-14  Dick Porter  <dick@ximian.com>

	* ResourceSet.cs: Throw the correct exceptions

	* ResourceManager.cs: Implemented all unfinished methods

2002-03-12  Duncan Mak  <duncan@ximian.com>

	* MissingManifestResourceException.cs: This should inherit from
	SystemException, not Exception.
